restrict_paths/ap.yml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: restrict-paths
spec:
  selector:
    matchLabels:
      app: http
  action: DENY
  rules:
  - to:
    - operation:
        paths: ["/*"]
        notPaths:
        - "/2"
        - "/4"
        - "/6"
        - "/8"
